Added more synonyms, modified phrasing on homepage

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
           <li>
           Click the “Open Article” button on a card to view the file in a new tab. From there, you can download your own copy directly from your browser.
           </li>
+          <li>
+        For some entries, you'll see a “Class Recording” button, which opens a video in a new tab.
+These cards may also include handouts, resource links, or slide decks—download them the same way as above.
+          </li>
         </ul>
 
         <h3>File Prefix</h3>
