Added new section to the menu

--- a/updated-menu.html
+++ b/updated-menu.html
@@ -55,6 +55,7 @@
         <a href="category-combat-rapier.html" data-page="">Combat - Rapier</a>
       </p>
       <p><a href="category-commerce.html" data-page="">Commerce</a></p>
+      <p><a href="category-crafts.html" data-page="">Crafts</a></p>
       <p><a href="category-crime.html" data-page="">Crime</a></p>
       <p><a href="category-cultures.html" data-page="">Cultures</a></p>
       <p><a href="category-dance.html" data-page="">Dance</a></p>
