--- a/category-food-by-region.html
+++ b/category-food-by-region.html
@@ -197,19 +197,19 @@
       <div class="letter-section" id="B">
         <h2>B</h2>
         <ul>
-          <li><a href="#">Banana</a></li>
-          <li><a href="#">Blueberry</a></li>
+          <li><a href="#">Brazil</a></li>
+          <li><a href="#">Byzantine</a></li>
         </ul>
       </div>
 
       <div class="letter-section" id="C">
         <h2>C</h2>
         <ul>
-          <li><a href="#">Cherry</a></li>
-          <li><a href="#">Cantaloupe</a></li>
+          <li><a href="#">Carribean (16th century)</a></li>
+          <li><a href="#"></a>Celtic Food/Feasts</li>
         </ul>
       </div>
-
+<!--
       <div class="letter-section" id="D">
         <h2>D</h2>
         <ul>
@@ -217,6 +217,7 @@
           <li><a href="#">D</a></li>
         </ul>
       </div>
+      -->
 
       <div class="letter-section" id="E">
         <h2>E</h2>
@@ -245,7 +246,7 @@
       <div class="letter-section" id="F">
         <h2>F</h2>
         <ul>
-          <li><a href="#">F</a></li>
+          <li><a href="#">France</a></li>
           <li><a href="#">F</a></li>
         </ul>
       </div>
@@ -275,7 +276,7 @@
       <div class="letter-section" id="H">
         <h2>H</h2>
         <ul>
-          <li><a href="#">H</a></li>
+          <li><a href="#">Hungary</a></li>
           <li><a href="#">H</a></li>
         </ul>
       </div>
@@ -336,7 +337,7 @@
       <div class="letter-section" id="L">
         <h2>L</h2>
         <ul>
-          <li><a href="#">L</a></li>
+          <li><a href="#">Low Countried (Holland, Netherlands)</a></li>
           <li><a href="#">L</a></li>
         </ul>
       </div>
@@ -360,27 +361,28 @@
       <div class="letter-section" id="N">
         <h2>N</h2>
         <ul>
-          <li><a href="#">N</a></li>
-          <li><a href="#">N</a></li>
+          <li><a href="#">New World (N. America)</a></li>
+          <li><a href="#">Normans</a></li>
+          <li> <a href="#">Norse</a></li>
         </ul>
       </div>
 
       <div class="letter-section" id="O">
         <h2>O</h2>
         <ul>
-          <li><a href="#">O</a></li>
-          <li><a href="#">O</a></li>
-        </ul>
+          <li><a href="#">Ottoman Turks</a></li>
+                </ul>
       </div>
 
       <div class="letter-section" id="P">
         <h2>P</h2>
         <ul>
-          <li><a href="#">P</a></li>
-          <li><a href="#">P</a></li>
+          <li><a href="#">Persia</a></li>
+          <li><a href="#">Poland</a></li>
+            <li><a href="#">Portugal</a></li>
         </ul>
       </div>
-
+<!--
       <div class="letter-section" id="Q">
         <h2>Q</h2>
         <ul>
@@ -388,7 +390,7 @@
           <li><a href="#">Q</a></li>
         </ul>
       </div>
-
+    -->
       <div class="letter-section" id="R">
         <h2>R</h2>
         <ul>
@@ -438,19 +440,20 @@
       <div class="letter-section" id="S">
         <h2>S</h2>
         <ul>
-          <li><a href="#">S</a></li>
-          <li><a href="#">S</a></li>
+          <li><a href="#">Saami (Norway)</a></li>
+          <li><a href="#">Scotland</a></li>
+          <li> <a href="#">Sicily</a></li>
+          <li> <a href="#">Spain</a></li>
         </ul>
       </div>
 
       <div class="letter-section" id="T">
         <h2>T</h2>
         <ul>
-          <li><a href="#">T</a></li>
-          <li><a href="#">T</a></li>
+          <li><a href="#">Turkey</a></li>
         </ul>
       </div>
-
+<!--
       <div class="letter-section" id="U">
         <h2>U</h2>
         <ul>
@@ -466,14 +469,24 @@
           <li><a href="#">V</a></li>
         </ul>
       </div>
+      -->
 
-      <div class="letter-section" id="Y">
+      <div class="letter-section" id="W">
+        <h2>W</h2>
+        <ul>
+          <li><a href="#">Wales</a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </div>
+<!--
+       <div class="letter-section" id="Y">
         <h2>Y</h2>
         <ul>
           <li><a href="#">Y</a></li>
           <li><a href="#">Y</a></li>
         </ul>
       </div>
+
 
       <div class="letter-section" id="Z">
         <h2>Z</h2>
@@ -483,8 +496,8 @@
         </ul>
       </div>
     </div>
+-->
 
-    <!-- Inject header + handle dark mode -->
     <script src="data/header.js"></script>
     <script src="js/synonyms.js"></script>
 <script src="js/script.js"></script>
@@ -494,7 +507,7 @@
     </button>
 
     <script>
-      // Show button when scrolled down
+      
       window.onscroll = function () {
         scrollFunction();
       };
